<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5566CDAA"
    android:orientation="vertical" >

    <!-- 课程 -->

    <TextView
        android:id="@+id/tab1_textview_kecheng"
        style="@style/tab1_text_tiaomustyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/tab1_text_kecheng" />
    
    <!-- 时间 -->
    
    <TextView
        android:id="@+id/tab1_textview_shijian"
        style="@style/tab1_text_tiaomustyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/tab1_text_didian" />

    <!-- 地点 -->

    <TextView
        android:id="@+id/tab1_textview_didian"
        style="@style/tab1_text_tiaomustyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/tab1_text_didian" />

<!--     专业

    <TextView
        android:id="@+id/tab1_textview_zhuanye"
        style="@style/tab1_text_tiaomustyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/tab1_text_zhuanye" />
 -->
    <!-- 班级 -->

    <TextView
        android:id="@+id/tab1_textview_banji"
        style="@style/tab1_text_tiaomustyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/tab1_text_banji" />

    <!-- 应到人数 -->

<!--     <TextView
        android:id="@+id/tab1_textview_sumstudents"
        style="@style/tab1_text_tiaomustyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/tab1_text_renshu" /> -->

</LinearLayout>